feature branch for MAP-1760